--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,4 +1,4 @@
-% !Tex root = = Thesis.tex
+% !TeX root = Thesis.tex
 % Điều chỉnh bởi Ta Viet Tai, ICTLAB, FETEL, HCMUS
 % Ngày điều chỉnh: 24/03/2024
 
@@ -264,6 +264,10 @@ Combination based on IEEE 802.11ax} % tên đề tài tiếng anh
 % \bibliographystylePub{plain}
 % \bibliographyPub{Publication}
 % \renewcommand{\refname}{Công trình công bố}
+
+%%============================
+%%======= Publications =======
+%%============================
 \renewcommand\bibname{Các công trình công bố}
 \begin{thebibliography}{100} 
     % \bibitem{Boney96} T. V. Tai, M. P. N. Tan, L. H. Nam, N. V. Ha, and T. T. T. Nguyen,, ``Convergence Evaluation of OFDMA-IDMA Combination based on IEEE 802.11ax,'' in \emph{2024 16th International Conference on Knowledge and Smart Technology (KST)}, pp. 247--252, 2024.
